--- a/x.html
+++ b/x.html
@@ -69,4 +69,10 @@ function jump(){
         margin: 0;
         outline: none;
         font-family: KaiTi;
-        font-size: 17px;
+           font-size: 17px;
+        text-align: center;
+        cursor: pointer;"/>
+</center>
+
+</body>
+</html>
