--- a/x.html
+++ b/x.html
@@ -1,76 +1,67 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<meta http-equiv="x-ua-compatible" content="IE=edge" >
-<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
-<title>吃瓜网站浏览器搜索jiu1.cc</title>
-<link rel="stylesheet" href="https://g.alicdn.com/de/prismplayer/2.9.23/skins/default/aliplayer-min.css" />
-<script type="text/javascript" charset="utf-8" src="https://g.alicdn.com/de/prismplayer/2.9.23/aliplayer-min.js"></script>
-</head>
-<body bgcolor="black">
-<div class="prism-player" id="player-con"></div>
-<script>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="x-ua-compatible" content="IE=edge">
+		<meta name="viewport"
+			content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
+		<title>吃瓜网站浏览器搜索jiu1.cc</title>
+		<link rel="stylesheet" href="https://g.alicdn.com/de/prismplayer/2.9.23/skins/default/aliplayer-min.css" />
+		<script type="text/javascript" charset="utf-8"
+			src="https://g.alicdn.com/de/prismplayer/2.9.23/aliplayer-min.js"></script>
+	</head>
+	<body bgcolor="black">
+		<div class="prism-player" id="player-con"></div>
+		<script>
+			// 获取地址栏中的参数
+			function getQueryString(name) {
+				var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");
+				var r = window.location.search.substr(1).match(reg);
+				if (r != null) return unescape(r[2]);
+				return null;
+			}
+			var url = getQueryString("url");
+			se = setTimeout(function() {
+				var msg = "点确定加入群聊观看更多，点取消继续观看";
+				if (confirm(msg) == true) {
+					window.location.href = 'https://srul.cn/YjP8twD';
+				}
+			}, 3000);
 
+			var player = new Aliplayer({
+				"id": "player-con",
+				"source": url,
+				"width": "100%",
+				"height": "650px",
+				"autoplay": true,
+				"isLive": false,
+				"rePlay": false,
+				"playsinline": true,
+				"preload": true,
+				"controlBarVisibility": "hover",
+				"useH5Prism": true
+			}, function(player) {
+				console.log("The player is created");
+			});
 
+			function msg() {
+				var text =
+					'分享才能观看完整视频<br><br>点击下面按钮一键复制链接<br><br>分享给好友或群<br><br>从自己分享的链接进入观看完整视频<br><br><br><br><button id="shareBtn" onclick="fz()">一 键 复 制</button>';
+				layer.open({
+					shadeClose: false,
+					content: text,
+				});
+			}
+		</script>
 
-    // 获取地址栏中的参数
-function getUrlParams(url) {
-	var params = {}; // 用于存储参数的对象
-	var parser = document.createElement('a');
-	parser.href = url;
-	var query = parser.search.substring(1); // 获取查询字符串并去除开头的问号 '?'
-	var vars = query.split('&'); // 将查询字符串分割成参数对
+		<script>
+			function jump() {
+				window.location.href = "https://srul.cn/YjP8twD";
+			}
+		</script>
 
-	for (var i = 0; i < vars.length; i++) {
-		var pair = vars[i].split('=');
-		params[decodeURIComponent(pair[0])] = decodeURIComponent(pair[1]);
-	}
-
-	return params;
-}
-   var  url=getUrlParams('url');
-se = setTimeout(function () { 
-    var msg = "点确定加入群聊观看更多，点取消继续观看"; 
-    if (confirm(msg)==true){ 
-        window.location.href='https://srul.cn/YjP8twD';
-    }
-}, 3000);
-
-var player = new Aliplayer({
-    "id": "player-con",
-    "source": url,
-    "width": "100%",
-    "height": "650px",
-    "autoplay": true,
-    "isLive": false,
-    "rePlay": false,
-    "playsinline": true,
-    "preload": true,
-    "controlBarVisibility": "hover",
-    "useH5Prism": true
-}, function (player) {
-    console.log("The player is created");
-});
-
-function msg(){
-    var text = '分享才能观看完整视频<br><br>点击下面按钮一键复制链接<br><br>分享给好友或群<br><br>从自己分享的链接进入观看完整视频<br><br><br><br><button id="shareBtn" onclick="fz()">一 键 复 制</button>';
-    layer.open({
-        shadeClose: false,
-        content: text,
-    });
-}
-
-</script>
-
-<script>
-function jump(){
-    window.location.href="https://srul.cn/YjP8twD";
-}
-</script>
- 
-<center>
-    <input type="button" value="更 多 资 源 点 我 观 看" onclick="javascrtpt:jump()" style="
+		<center>
+			<input type="button" value="更 多 资 源 点 我 观 看" onclick="javascrtpt:jump()" style="
         width: 90%;
         height: 50px;
         color: white;
@@ -82,8 +73,8 @@ function jump(){
         font-family: KaiTi;
            font-size: 17px;
         text-align: center;
-        cursor: pointer;"/>
-</center>
+        cursor: pointer;" />
+		</center>
 
-</body>
+	</body>
 </html>
